syntax = "proto3";

package protos.example;


service Streamer {
    rpc example1(Input) returns (stream Data);
    rpc example2(Input) returns (stream Data);
    rpc example3(Input) returns (stream Data);
}

message Input {
    int32 packets = 1;
    int32 packet_size = 2;
}

message Data {
    repeated int32 values = 1;
}
